Layout fixes
- fixed layout issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-body, html { background-color: #191919; height: 100%; }
+body, html { background-color: #191919; height: 100%; overflow: hidden; }
 
 .feed-container {
     background-color: #646464;
@@ -12,13 +12,19 @@ body, html { background-color: #191919; height: 100%; }
 .row, .row > section { height: 100%; }
 
 #page { background-color: #191919; height: 100%; width: 100%; }
-#camera-feeds .feed-container { margin: 10px; zoom: 10%; }
+#camera-feeds .feed-container {
+    margin: 10px;
+    zoom: 10%;
+    -moz-transform: scale(.1);
+    -moz-transform-origin: 0% 0%;
+}
 #main-camera .feed-container {
-    zoom: 0.45;
+    zoom: 45%;
     position: relative;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%) scale(.45);
     margin: 0 auto;
 }
 
